# xmonad-log-applet-gnome

./: Makefile.am  README  configure.ac  git.mk  xmonad.hs
src/: Makefile.am  xmonad-applet.c  xmonad-applet.h  xmonad-module.c
